--- a/kubernetes-setup/node-playbook.yml
+++ b/kubernetes-setup/node-playbook.yml
@@ -23,7 +23,7 @@
 
   - name: Add apt repository for stable version
     apt_repository:
-      repo: deb [arch=amd64] https://download.docker.com/linux/ubuntu xenial stable
+      repo: deb [arch=amd64] https://download.docker.com/linux/ubuntu focal stable
       state: present
 
   - name: Install docker and its dependecies
@@ -33,9 +33,9 @@
       update_cache: yes
     vars:
       packages:
-      - docker-ce 
-      - docker-ce-cli 
-      - containerd.io
+        - docker-ce=5:23.0.1-1~ubuntu.20.04~focal
+        - docker-ce-cli=5:23.0.1-1~ubuntu.20.04~focal
+        - containerd.io=1.6.19-1
     notify:
       - docker status
 
@@ -77,9 +77,9 @@
       update_cache: yes
     vars:
       packages:
-        - kubelet=1.25.5-00
-        - kubeadm=1.25.5-00
-        - kubectl=1.25.5-00  
+        - kubelet=1.26.3-00
+        - kubeadm=1.26.3-00
+        - kubectl=1.26.3-00  
 
   # containerd toml refresh
   - name: remove containerd toml 
