--- a/kubernetes-setup/control-playbook.yml
+++ b/kubernetes-setup/control-playbook.yml
@@ -94,10 +94,10 @@
   - name: restart containerd
     command: sudo systemctl restart containerd
 
-  - name: Configure node ip
+  - name: Configure worker ip
     lineinfile:
       path: /etc/default/kubelet
-      line: KUBELET_EXTRA_ARGS=--node-ip={{ node_ip }}
+      line: KUBELET_EXTRA_ARGS=--node-ip={{ worker_ip }}
       create: yes
 
   - name: Restart kubelet
@@ -106,9 +106,9 @@
       daemon_reload: yes
       state: restarted
 
-# Initialize the Kubernetes cluster with kubeadm using the below code (applicable only on master node)
+# Initialize the Kubernetes cluster with kubeadm using the below code (applicable only on control node)
   - name: Initialize the Kubernetes cluster using kubeadm
-    command: kubeadm init --apiserver-advertise-address="192.168.50.10" --apiserver-cert-extra-sans="192.168.50.10"  --node-name k8s-master --pod-network-cidr=192.168.0.0/16 --v=6
+    command: kubeadm init --apiserver-advertise-address="192.168.50.10" --apiserver-cert-extra-sans="192.168.50.10"  --node-name k8s-control --pod-network-cidr=192.168.0.0/16 --v=6
 
 # Setup the kube config file for the vagrant user to access the Kubernetes cluster using the below code
   - name: Setup kubeconfig for vagrant user
